// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<notice /> renders properly when published with a first version 1`] = `
<div
  class="articleform__notice articleform__notice--publishing"
>
  Saving ...
</div>
`;

exports[`<notice /> renders properly when published with a second version 1`] = `
<div
  class="articleform__notice articleform__notice--publishing"
>
  Publishing...
</div>
`;

exports[`<notice /> renders properly when unpublished with a version 1`] = `
<div
  class="articleform__notice articleform__notice--draft"
>
  Saving Draft...
</div>
`;

exports[`<notice /> renders properly when unpublished without a version 1`] = `
<div
  class="articleform__notice articleform__notice--draft"
>
  Saving ...
</div>
`;
